// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Enum > when value is a primitive > prints correctly for empty value [without colors] 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(foo, bar)
",
  "> 1 | "baz"
    | ^^^^^ Did you mean bar here?",
]
`;

exports[`Enum > when value is a primitive > prints correctly for empty value 1`] = `
[
  "[31m[1mENUM[22m should be equal to one of the allowed values[39m",
  "[31m(foo, bar)[39m
",
  "> 1 | "baz"
    | ^^^^^ Did you mean [95mbar[39m here?",
]
`;

exports[`Enum > when value is a primitive > prints correctly for enum prop [without colors] 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(foo, bar)
",
  "> 1 | "baz"
    | ^^^^^ Did you mean bar here?",
]
`;

exports[`Enum > when value is a primitive > prints correctly for enum prop 1`] = `
[
  "[31m[1mENUM[22m should be equal to one of the allowed values[39m",
  "[31m(foo, bar)[39m
",
  "> 1 | "baz"
    | ^^^^^ Did you mean [95mbar[39m here?",
]
`;

exports[`Enum > when value is a primitive > prints correctly for no levenshtein match [without colors] 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(one, two)
",
  "> 1 | "baz"
    | ^^^^^ Unexpected value, should be equal to one of the allowed values",
]
`;

exports[`Enum > when value is a primitive > prints correctly for no levenshtein match 1`] = `
[
  "[31m[1mENUM[22m should be equal to one of the allowed values[39m",
  "[31m(one, two)[39m
",
  "> 1 | "baz"
    | ^^^^^ Unexpected value, should be equal to one of the allowed values",
]
`;

exports[`Enum > when value is an object > prints correctly for empty value [without colors] 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(foo, bar)
",
  "  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ Did you mean bar here?
  3 | }",
]
`;

exports[`Enum > when value is an object > prints correctly for empty value 1`] = `
[
  "[31m[1mENUM[22m should be equal to one of the allowed values[39m",
  "[31m(foo, bar)[39m
",
  "  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ Did you mean [95mbar[39m here?
  3 | }",
]
`;

exports[`Enum > when value is an object > prints correctly for enum prop [without colors] 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(foo, bar)
",
  "  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ Did you mean bar here?
  3 | }",
]
`;

exports[`Enum > when value is an object > prints correctly for enum prop 1`] = `
[
  "[31m[1mENUM[22m should be equal to one of the allowed values[39m",
  "[31m(foo, bar)[39m
",
  "  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ Did you mean [95mbar[39m here?
  3 | }",
]
`;

exports[`Enum > when value is an object > prints correctly for no levenshtein match [without colors] 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(one, two)
",
  "  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ Unexpected value, should be equal to one of the allowed values
  3 | }",
]
`;

exports[`Enum > when value is an object > prints correctly for no levenshtein match 1`] = `
[
  "[31m[1mENUM[22m should be equal to one of the allowed values[39m",
  "[31m(one, two)[39m
",
  "  1 | {
> 2 |   "id": "baz"
    |         ^^^^^ Unexpected value, should be equal to one of the allowed values
  3 | }",
]
`;
